prevent hover animations from triggering on mobile

--- a/public/css/buildings.css
+++ b/public/css/buildings.css
@@ -1,3 +1,17 @@
+@media (hover: hover) {
+    .building:hover {
+        transform: translate(-4px, -4px);
+    }
+    .green:hover {
+        box-shadow: inset 0 0 0 2px green, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px green;
+    }
+    .orange:hover {
+        box-shadow: inset 0 0 0 2px orange, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px orange;
+    }
+    .red:hover {
+        box-shadow: inset 0 0 0 2px red, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px red;
+    }
+}
 .cards {
     display: grid;
     /* grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3); */
@@ -34,9 +48,6 @@
     padding: 10px;
     box-shadow: 0px 100px 0px 100px #fffb;
 } */
-.building:hover {
-    transform: translate(-4px, -4px);
-}
 .building:active {
     transform: translate(0px, 0px) !important;
 }
@@ -44,9 +55,6 @@
     color: #000c;
     /* outline: 2px solid green; */
     box-shadow: inset 0 0 0 2px green, inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px green;
-}
-.green:hover {
-    box-shadow: inset 0 0 0 2px green, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px green;
 }
 .green:active {
     box-shadow: inset 0 0 0 2px green, inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px green;
@@ -56,9 +64,6 @@
     /* outline: 2px solid orange; */
     box-shadow: inset 0 0 0 2px orange, inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px orange;
 }
-.orange:hover {
-    box-shadow: inset 0 0 0 2px orange, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px orange;
-}
 .orange:active {
     box-shadow: inset 0 0 0 2px orange, inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px orange;
 }
@@ -66,9 +71,6 @@
     color: #000c;
     /* outline: 2px solid red; */
     box-shadow: inset 0 0 0 2px red, inset 0 0 0 1000px rgba(255,255,255,0.75), 0px 0px red;
-}
-.red:hover {
-    box-shadow: inset 0 0 0 2px red, inset 0 0 0 1000px rgba(255,255,255,0.6), 8px 8px red;
 }
 .red:active {
     box-shadow: inset 0 0 0 2px red, inset 0 0 0 1000px rgba(255,255,255,0.6), 0px 0px red;
