--- a/public/css/rooms.css
+++ b/public/css/rooms.css
@@ -18,6 +18,18 @@
         display: none;
     }
 }
+@media (hover: hover) {
+    .result:hover {
+        background: #bbb;
+        /* color: white; */
+    }
+    .result:hover > .dot {
+        transform: translate(135%, 0) scale(10) !important;
+    }
+    .result:nth-child(2n):hover {
+        background: #bbb;
+    }
+}
 .result {
     background: #eee;
     display: grid;
@@ -45,13 +57,6 @@
     -webkit-transition: all .5s;
     border-radius: 50%;
     transform: translate(135%, 0) scale(1) !important;
-}
-.result:hover {
-    background: #bbb;
-    /* color: white; */
-}
-.result:hover > .dot {
-    transform: translate(135%, 0) scale(10) !important;
 }
 .result > * {
     font-size: calc(12px + .1vw);
@@ -83,6 +88,3 @@
 /* .result:nth-child(2n) {
     background: #ddd;
 } */
-.result:nth-child(2n):hover {
-    background: #bbb;
-}
